// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test click handler 1`] = `
<span
  className="Pinpoint Internal Link clickable Content Card Read "
  onClick={[Function]}
>
  Read
  <svg
    className="arrow"
    fill="none"
    height={16}
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="2"
    viewBox="0 0 24 24"
    width={16}
  >
    <path
      d="M5 12h14"
    />
    <path
      d="M12 5l7 7-7 7"
    />
  </svg>
</span>
`;

exports[`Test custom className 1`] = `
<span
  className="Pinpoint Internal Link  Content Card Read test-custom"
>
  Read
  <svg
    className="arrow"
    fill="none"
    height={16}
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="2"
    viewBox="0 0 24 24"
    width={16}
  >
    <path
      d="M5 12h14"
    />
    <path
      d="M12 5l7 7-7 7"
    />
  </svg>
</span>
`;

exports[`Test default state 1`] = `
<span
  className="Pinpoint Internal Link  Content Card Read "
>
  Read
  <svg
    className="arrow"
    fill="none"
    height={16}
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="2"
    viewBox="0 0 24 24"
    width={16}
  >
    <path
      d="M5 12h14"
    />
    <path
      d="M12 5l7 7-7 7"
    />
  </svg>
</span>
`;

exports[`Test link (new tab) 1`] = `
<a
  className="Pinpoint Internal Link Content Card Read "
  href="https://pinpoint.com"
  rel="noopener noreferrer"
  target="_blank"
>
  Read
  <svg
    className="arrow"
    fill="none"
    height={16}
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="2"
    viewBox="0 0 24 24"
    width={16}
  >
    <path
      d="M5 12h14"
    />
    <path
      d="M12 5l7 7-7 7"
    />
  </svg>
</a>
`;

exports[`Test link 1`] = `
<a
  className="Pinpoint Internal Link Content Card Read "
  href="https://pinpoint.com"
>
  Read
  <svg
    className="arrow"
    fill="none"
    height={16}
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="2"
    viewBox="0 0 24 24"
    width={16}
  >
    <path
      d="M5 12h14"
    />
    <path
      d="M12 5l7 7-7 7"
    />
  </svg>
</a>
`;

exports[`Test link and click handler 1`] = `
<a
  className="Pinpoint Internal Link Content Card Read "
  href="https://pinpoint.com"
>
  Read
  <svg
    className="arrow"
    fill="none"
    height={16}
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="2"
    viewBox="0 0 24 24"
    width={16}
  >
    <path
      d="M5 12h14"
    />
    <path
      d="M12 5l7 7-7 7"
    />
  </svg>
</a>
`;
